# agent-gateway

./: .gitignore  README.md  agent_gateway.spec  hello.py  hermes_email.md  pyproject.toml  tests.py
.github/workflows/: build.yml
docs/: integration-guide.md  冗余分析报告.md
docs/plans/: 2026-06-20-data-home-migration.md  2026-06-20-feishu-session-grouping-fix.md  2026-06-20-feishu-tool-call-cards-design.md
examples/: basic_usage.py  custom_adapter.py  gateway.yaml
src/agent_gateway/: __init__.py  __main__.py
src/agent_gateway/adapters/: __init__.py  _runtime.py  discord.py  email.py  feishu.py  feishu_cards.py  slack.py  telegram.py  webhook.py
src/agent_gateway/agents/: __init__.py  base.py  claude_code.py  claude_code_sdk.py  codex.py  events.py  pi_agent.py
src/agent_gateway/core/: __init__.py  adapter.py  commands.py  config.py  cron_tool.py  delivery.py  message.py  registry.py  runner.py  session.py  stream.py  stream_events.py
src/agent_gateway/cron/: __init__.py  jobs.py  manager.py  scheduler.py
src/agent_gateway/media/: __init__.py  cache.py
src/agent_gateway/server/: __init__.py  agent_factory.py  (+7 more)
tests/: test_agent_factory.py  test_agents_base.py  test_claude_code.py  test_claude_code_sdk.py  test_codex.py  test_config.py  test_continuous_loop.py  test_cron_jobs.py  test_delivery.py  test_feishu_cards.py  test_loop_command.py  test_loop_self_terminate.py  test_loop_self_terminate_execution.py  test_message.py  test_methods_run_prompt.py  test_pi_agent.py  test_prompts_handlers.py  test_registry.py  test_runner_agent_events.py  test_runner_desktop_sync.py  test_session.py  test_session_manager.py  test_session_store.py  test_skills_scanner.py
(+5 files in other folders)
